--- a/05-reactive-autocomplete-input/src/style.css
+++ b/05-reactive-autocomplete-input/src/style.css
@@ -26,7 +26,7 @@ body {
   align-items: center;
   justify-content: center;
   height: 100vh;
-  overflow: hidden;
+  overflow: scroll;
   margin: 0;
 }
 
